--- a/.env.development
+++ b/.env.development
@@ -2,3 +2,4 @@ NEXT_PUBLIC_MONGO_URI=mongodb+srv://alejandropalacios88:cKmei5FElzymuql2@cluster
 NEXT_PUBLIC_AUTH_SECRET=secret
 NEXT_PUBLIC_AUTH_URL=http://localhost:3000
 NEXT_PUBLIC_JWT_SECRET=secret
+NEXT_PUBLIC_NODE_ENV=development
