--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.2.0",
     "next": "14.1.0",
+    "primereact": "^10.5.1",
     "react": "^18",
     "react-dom": "^18"
   },
