--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,8 @@
     ],
     "paths": {
       "@/*": ["./src/*"],
-      "@/auth/*": ["./src/app/(auth)/*"]
+      "@/auth/*": ["./src/app/(auth)/*"],
+      "@/phones/*": ["./src/app/phones/*"],
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
