--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,6 +21,7 @@
       "@/*": ["./src/*"],
       "@/auth/*": ["./src/app/(auth)/*"],
       "@/phones/*": ["./src/app/phones/*"],
+      "@/customers/*": ["./src/app/customers/*"],
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
