feat: add new data actions module

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,6 +23,7 @@
       "@/phones/*": ["./src/app/phones/*"],
       "@/customers/*": ["./src/app/customers/*"],
       "@/profiles/*": ["./src/app/profiles/*"],
+      "@/actions/*": ["./src/app/actions/*"],
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
